--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,31 @@
-fastapi == 0.46.0
-uvicorn == 0.11.1
-pytest == 5.3.2
-requests == 2.22.0
+anyio==3.6.2
+atomicwrites==1.4.1
+attrs==22.1.0
+certifi==2022.9.24
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.6
+fastapi==0.46.0
+greenlet==2.0.1
+h11==0.14.0
+httpcore==0.16.2
+httpx==0.23.1
+idna==2.8
+more-itertools==9.0.0
+packaging==21.3
+pluggy==0.13.1
+psycopg2-binary==2.9.5
+py==1.11.0
+pydantic==1.10.2
+pyparsing==3.0.9
+pytest==5.3.2
+requests==2.22.0
+rfc3986==1.5.0
+sniffio==1.3.0
+SQLAlchemy==1.4.44
+starlette==0.12.9
+typing_extensions==4.4.0
+urllib3==1.25.11
+uvicorn==0.11.1
+wcwidth==0.2.5
+websockets==8.1
