--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,4 +23,4 @@ jobs:
           python -m pip install poetry
           poetry install
       - name: Test with tox
-        run: poetry run tox
+        run: tox
