--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ uvicorn = "^0.20.0"
 fastapi = "^0.88.0"
 pytest = "^7.2.0"
 httpx = "^0.23.1"
+
+
+[tool.poetry.group.dev.dependencies]
 tox-gh-actions = "^2.11.0"
 
 
