--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         platform: [windows-latest]
-        python-version: [3.9]
+        python-version: ['3.9']
 
     steps:
       - uses: actions/checkout@v1
@@ -20,7 +20,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           python -m pip install poetry
           poetry install
       - name: Test with tox
-        run: poetry run tox
+        run: tox
