--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,8 @@ python =
     3.9: py39
 
 [testenv]
-deps =
-    pytest
+setenv = PYTHONIOENCODING=utf-8
+whitelist_externals = poetry
 commands =
+    poetry install -v
     pytest test/test.py
