--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ httpx = "^0.23.1"
 
 
 [tool.poetry.group.dev.dependencies]
-tox-gh-actions = "^2.11.0"
+tox-gh-actions = "^2.10.0"
+tox = "^3.23.0"
 
 
 [build-system]
