--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,7 @@ python =
     3.9: py39
 
 [testenv]
-setenv = PYTHONIOENCODING=utf-8
-whitelist_externals = poetry
+deps =
+    pytest
 commands =
-    poetry install -v
     pytest test/test.py
