--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,3 +25,45 @@ jobs:
           poetry install
       - name: Test with tox
         run: poetry run tox
+
+        deploy:
+          name: Deploy Cloud Workflow
+          runs-on: ubuntu-latest
+          steps:
+            - uses: actions/checkout@v2
+            - name: Set up Cloud SDK
+              uses: google-github-actions/auth@v0
+              with:
+                credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+                project_id: ${{ secrets.GCP_PROJECT_ID }}
+                service_account_key: ${{ secrets.GCP_SA_KEY }}
+                export_default_credentials: true
+            - name: Use gcloud CLI
+              run: |
+                gcloud workflows deploy myWorkflowFromGitHub \
+                --location europe-west3 \
+                --source dhl_workflows/get_wiki_article_workflow.yaml \
+                --project ${{ secrets.GCP_PROJECT_ID }} \
+                --labels "commit-sha=${{ github.sha }}" \
+                --service-account pramod-goyal@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+
+#  deploy:
+#    name: Deploy Cloud Workflow
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Cloud SDK
+#        uses: google-github-actions/auth@v0
+#        with:
+#          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+#          project_id: ${{ secrets.GCP_PROJECT_ID }}
+#          service_account_key: ${{ secrets.GCP_SA_KEY }}
+#          export_default_credentials: true
+#      - name: Use gcloud CLI
+#        run: |
+#          gcloud workflows deploy myWorkflowFromGitHub \
+#          --location europe-west3 \
+#          --source dhl_workflows/get_wiki_article_workflow.yaml \
+#          --project ${{ secrets.GCP_PROJECT_ID }} \
+#          --labels "commit-sha=${{ github.sha }}" \
+#          --service-account pramod-goyal@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
