--- a/.github/workflows/deploy_SaaS.yml
+++ b/.github/workflows/deploy_SaaS.yml
@@ -1,31 +1,38 @@
-#deploy:
-#  name: Setup, Build, Publish, and Deploy
-#  runs-on: ubuntu-latest
-#  steps:
-#    - name: Checkout
-#      uses: actions/checkout@v2
-#
-#    # Setup gcloud CLI
-#    - uses: google-github-actions/setup-gcloud@v0
-#      with:
-#        service_account_email: pramod-goyal@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
-#        service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
-#        export_default_credentials: true
-#
-#    # Configure Docker with Credentials
-#    - name: Configure Docker
-#      run: |
-#        gcloud auth configure-docker
-#
-#    # Build the Docker image
-#    - name: Build & Publish
-#      run: |
-#        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-#        gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api
-#        gcloud config set run/region europe-west3
-#
-#    # Deploy the Docker image to the GKE cluster
-#    - name: Deploy
-#      run: |
-#        gcloud run deploy cars-api --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api \
-#        --platform managed
+name: Deployment
+
+on:
+  - push
+  - pull_request
+
+jobs:
+  deploy:
+    name: Setup, Build, Publish, and Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # Setup gcloud CLI
+      - uses: google-github-actions/setup-gcloud@v0
+        with:
+          service_account_email: pramod-goyal@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+          service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
+          export_default_credentials: true
+
+      # Configure Docker with Credentials
+      - name: Configure Docker
+        run: |
+          gcloud auth configure-docker
+
+      # Build the Docker image
+      - name: Build & Publish
+        run: |
+          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api
+          gcloud config set run/region europe-west3
+
+      # Deploy the Docker image to the GKE cluster
+      - name: Deploy
+        run: |
+          gcloud run deploy cars-api --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api \
+          --platform managed
