--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,12 @@
-name: Tests
+name: Test and deployment
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -36,8 +40,8 @@ jobs:
 #        uses: google-github-actions/auth@v0
 #        with:
 #          credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
-#          project_id: ${{ secrets.GCP_PROJECT_ID }}
 #          service_account_key: ${{ secrets.GCP_SA_KEY }}
+#          project_id: ${{ secrets.GCP_PROJECT_ID }}
 #          export_default_credentials: true
 #      - name: Use gcloud CLI
 #        run: |
@@ -48,34 +52,34 @@ jobs:
 #          --labels "commit-sha=${{ github.sha }}" \
 #          --service-account pramod-goyal@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
 #
-#  deploy:
-#    name: Setup, Build, Publish, and Deploy
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#
-#      # Setup gcloud CLI
-#      - uses: google-github-actions/setup-gcloud@v0
-#        with:
-#          service_account_email: pramod-goyal@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
-#          service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
-#          export_default_credentials: true
-#
-#      # Configure Docker with Credentials
-#      - name: Configure Docker
-#        run: |
-#          gcloud auth configure-docker
-#
-#      # Build the Docker image
-#      - name: Build & Publish
-#        run: |
-#          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-#          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api
-#          gcloud config set run/region europe-west3
-#
-#      # Deploy the Docker image to the GKE cluster
-#      - name: Deploy
-#        run: |
-#          gcloud run deploy cars-api --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api \
-#          --platform managed
+  deploy:
+    name: Setup, Build, Publish, and Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # Setup gcloud CLI
+      - uses: google-github-actions/setup-gcloud@v0
+        with:
+          service_account_email: pramod-goyal@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+          service_account_key: ${{ secrets.GOOGLE_CREDENTIALS }}
+          export_default_credentials: true
+
+      # Configure Docker with Credentials
+      - name: Configure Docker
+        run: |
+          gcloud auth configure-docker
+
+      # Build the Docker image
+      - name: Build & Publish
+        run: |
+          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api
+          gcloud config set run/region europe-west3
+
+      # Deploy the Docker image to the GKE cluster
+      - name: Deploy
+        run: |
+          gcloud run deploy cars-api --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api \
+          --platform managed
