--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ uvicorn = "^0.20.0"
 fastapi = "^0.88.0"
 pytest = "^7.2.0"
 httpx = "^0.23.1"
+websockets = "^10.4"
 
 
 [tool.poetry.group.dev.dependencies]
