--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,29 @@
-anyio==3.6.2
-atomicwrites==1.4.1
-attrs==22.1.0
-black==22.10.0
-CacheControl==0.12.11
-cachy==0.3.0
-certifi==2022.9.24
-chardet==3.0.4
-charset-normalizer==2.1.1
-cleo==1.0.0a5
-click==8.1.3
-colorama==0.4.6
-crashtest==0.3.1
-distlib==0.3.6
-dulwich==0.20.50
-exceptiongroup==1.0.4
-fastapi==0.88.0
-filelock==3.8.2
-greenlet==2.0.1
-h11==0.14.0
-html5lib==1.1
-httpcore==0.16.2
-httpx==0.23.1
-idna==3.4
-importlib-metadata==4.13.0
-importlib-resources==5.10.1
-iniconfig==1.1.1
-jaraco.classes==3.2.3
-jsonschema==4.17.3
-keyring==23.11.0
-lockfile==0.12.2
-more-itertools==9.0.0
-msgpack==1.0.4
-mypy-extensions==0.4.3
-packaging==21.3
-pathspec==0.10.2
-pexpect==4.8.0
-pkginfo==1.9.2
-platformdirs==2.6.0
-pluggy==1.0.0
-poetry==1.2.2
-poetry-core==1.3.2
-poetry-plugin-export==1.2.0
-psycopg2-binary==2.9.5
-ptyprocess==0.7.0
-py==1.11.0
-pydantic==1.10.2
-pylev==1.4.0
-pyparsing==3.0.9
-pyrsistent==0.19.2
-pytest==7.2.0
-pywin32-ctypes==0.2.0
-requests==2.28.1
-requests-toolbelt==0.9.1
-rfc3986==1.5.0
-shellingham==1.5.0
-six==1.16.0
-sniffio==1.3.0
-SQLAlchemy==1.4.44
-starlette==0.22.0
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.6
-tox==3.27.1
-tox-gh-actions==2.11.0
-tox-poetry==0.4.1
-typing_extensions==4.4.0
-urllib3==1.26.13
-uvicorn==0.20.0
-virtualenv==20.17.1
-wcwidth==0.2.5
-webencodings==0.5.1
-websockets==8.1
-zipp==3.11.0
+anyio==3.6.2 ; python_version >= "3.9" and python_version < "4.0"
+attrs==22.1.0 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2022.12.7 ; python_version >= "3.9" and python_version < "4"
+charset-normalizer==2.1.1 ; python_version >= "3.9" and python_version < "4"
+click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32" or python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
+exceptiongroup==1.0.4 ; python_version >= "3.9" and python_version < "3.11"
+fastapi==0.88.0 ; python_version >= "3.9" and python_version < "4.0"
+greenlet==2.0.1 ; python_version >= "3.9" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "4.0"
+h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
+httpcore==0.16.2 ; python_version >= "3.9" and python_version < "4.0"
+httpx==0.23.1 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.9" and python_version < "4"
+iniconfig==1.1.1 ; python_version >= "3.9" and python_version < "4.0"
+packaging==22.0 ; python_version >= "3.9" and python_version < "4.0"
+pluggy==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+psycopg2-binary==2.9.5 ; python_version >= "3.9" and python_version < "4.0"
+pydantic==1.10.2 ; python_version >= "3.9" and python_version < "4.0"
+pytest==7.2.0 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.28.1 ; python_version >= "3.9" and python_version < "4"
+rfc3986[idna2008]==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
+sniffio==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
+sqlalchemy==1.4.44 ; python_version >= "3.9" and python_version < "4.0"
+starlette==0.22.0 ; python_version >= "3.9" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
+typing-extensions==4.4.0 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==1.26.13 ; python_version >= "3.9" and python_version < "4"
+uvicorn==0.20.0 ; python_version >= "3.9" and python_version < "4.0"
+websockets==10.4 ; python_version >= "3.9" and python_version < "4.0"
