--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   build:
     runs-on: ${{matrix.platform}}
+    env:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     strategy:
       matrix:
         platform: [windows-latest]
@@ -83,3 +85,10 @@ jobs:
         run: |
           gcloud run deploy cars-api --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/cars-api \
           --platform managed
+
+      - uses: act10ns/slack@v1
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: '#test-alerts'
+        if: always()
